--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ buildscript {
         }
     }
     dependencies {
+        def nav_version = "2.3.0-alpha06"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath("org.jmailen.gradle:kotlinter-gradle:2.3.2")
