--- a/versions.gradle
+++ b/versions.gradle
@@ -30,6 +30,9 @@ ext {
     appcompat_version = "1.1.0"
     fragment_version = "1.3.0-alpha04"
 
+    // Epoxy Version
+    epoxy_version = "4.0.0-beta1"
+
     //Test dependencies
     junitVersion = '4.12'
     mockitoCoreVersion = '3.2.0'
@@ -47,7 +50,7 @@ ext {
     appCompat_version = '1.1.0'
     core_version = '1.2.0'
     core_Ktx_version = '1.2.0'
-    nav_version = '2.3.0-alpha06'
+    nav_version = '2.3.0-beta01'
 
     // 3rd party
     dagger_version = '2.27'
