--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ android {
 
 dependencies {
 
+    implementation project(":domain")
+    implementation project(":gpx")
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     // Dagger
