--- a/gpx/src/main/AndroidManifest.xml
+++ b/gpx/src/main/AndroidManifest.xml
@@ -14,9 +14,5 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <string name="app_name">All About Maps</string>
-    <string name="title_route_from_gpx">Draw route from GPX</string>
-    <string name="description_route_from_gpx">In this tutorial we will first parse the route points from a gpx file and then show the route with waypoints on map.</string>
-    <string name="not_implemented">Not implemented</string>
-</resources>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.ulusoy.allaboutmaps.gpx" />
