--- a/versions.gradle
+++ b/versions.gradle
@@ -26,7 +26,7 @@ ext {
 
     // Android
     material_version = '1.2.0-alpha06'
-    constraint_layout_version = '2.0.0-beta4'
+    constraint_layout_version = '2.0.0-beta6'
     appcompat_version = "1.1.0"
     fragment_version = "1.3.0-alpha04"
 
@@ -56,4 +56,8 @@ ext {
     dagger_version = '2.27'
     coroutines_version = "1.3.5"
     timber_version = "4.7.1"
+
+    // GPX parser
+    jodaVersion = "2.10.3"
+    gpxParserVersion = "1.6.0"
 }
