--- a/versions.gradle
+++ b/versions.gradle
@@ -57,6 +57,10 @@ ext {
     coroutines_version = "1.3.5"
     timber_version = "4.7.1"
 
+    // Mapbox
+    mapboxSdkVersion = "9.1.0"
+    mapboxAnnotationVersion = "0.7.0"
+
     // GPX parser
     jodaVersion = "2.10.3"
     gpxParserVersion = "1.6.0"
