--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,9 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
-        maven {
-            url = uri("https://plugins.gradle.org/m2/")
-        }
+        maven { url = uri("https://plugins.gradle.org/m2/") }
+        maven { url "https://maven.google.com" }
+
     }
     dependencies {
         def nav_version = "2.3.0-alpha06"
