--- a/versions.gradle
+++ b/versions.gradle
@@ -61,6 +61,9 @@ ext {
     mapboxSdkVersion = "9.1.0"
     mapboxAnnotationVersion = "0.7.0"
 
+    // GMS
+    gms_maps_version = "17.0.0"
+
     // GPX parser
     jodaVersion = "2.10.3"
     gpxParserVersion = "1.6.0"
