--- a/build.gradle
+++ b/build.gradle
@@ -24,14 +24,16 @@ buildscript {
         mavenCentral()
         maven { url = uri("https://plugins.gradle.org/m2/") }
         maven { url "https://maven.google.com" }
-
+        maven { url 'https://developer.huawei.com/repo/' } // HUAWEI Maven repository
     }
     dependencies {
         def nav_version = "2.3.0-alpha06"
+        def agc_version = "1.2.1.301"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath("org.jmailen.gradle:kotlinter-gradle:2.3.2")
+        classpath "com.huawei.agconnect:agcp:$agc_version"  // HUAWEI agcp plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -41,6 +43,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://developer.huawei.com/repo/' } // HUAWEI Maven repository
     }
 }
 
