--- a/versions.gradle
+++ b/versions.gradle
@@ -31,7 +31,7 @@ ext {
     fragment_version = "1.3.0-alpha04"
 
     // Epoxy Version
-    epoxy_version = "4.0.0-beta2"
+    epoxy_version = "3.11.0"
 
     //Test dependencies
     junitVersion = '4.12'
