add datasource module

--- a/datasource/build.gradle
+++ b/datasource/build.gradle
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+    implementation project(":domain")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Dagger
@@ -44,4 +45,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
+    // Timber
+    implementation "com.jakewharton.timber:timber:$timber_version"
 }
