--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,7 @@ android {
 dependencies {
 
     implementation project(":domain")
+    implementation project(":datasource")
     implementation project(":gpx")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
