--- a/gpx/build.gradle
+++ b/gpx/build.gradle
@@ -33,8 +33,8 @@ android {
 }
 
 dependencies {
-
     implementation project(":domain")
+    implementation project(":datasource")
 
     // Dagger
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
